fix filters gradient on safari

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -79,16 +79,28 @@ a {
 
   &:after {
     content: "";
+    display: block;
     width: 80px;
     height: 100%;
-    background: linear-gradient(
-      90deg,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(14, 25, 38, 1) 100%
-    );
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 10;
+    background: -moz-linear-gradient(
+      left,
+      rgba(14, 25, 38, 0) 0%,
+      rgba(14, 25, 38, 1) 100%
+    );
+    background: -webkit-linear-gradient(
+      left,
+      rgba(14, 25, 38, 0) 0%,
+      rgba(14, 25, 38, 1) 100%
+    );
+    background: linear-gradient(
+      to right,
+      rgba(14, 25, 38, 0) 0%,
+      rgba(14, 25, 38, 1) 100%
+    );
   }
 
   @media (min-width: 992px) {
@@ -111,7 +123,7 @@ a {
     transition: ease-in-out 0.2s color;
 
     &:last-of-type {
-      margin-right: 100px;
+      padding-right: 80px;
     }
 
     span {
